# kirin

./: .gitignore  BREAKING-CHANGES.md  CHANGELOG.md  Makefile  README.md  dune-project  kirin.opam
bench/: bench_kirin.ml  dune
lib/: backpressure.ml  backpressure.mli  cache.ml  cache.mli  cluster.ml  cluster.mli  compress.ml  compress.mli  cookie.ml  cookie.mli  db.ml  db.mli  db_events.ml  db_events.mli  dune  etag.ml  etag.mli  fs_compat.ml  fs_compat.mli  graphql_adapter.ml  graphql_adapter.mli  graphql_relay.ml  graphql_relay.mli  grpc.ml  grpc.mli  health.ml  health.mli  i18n.ml  i18n.mli  jobs.ml  jobs.mli  kirin.ml  kirin.mli  logger.ml  logger.mli  mcp_adapter.ml  mcp_adapter.mli  metric_common.ml  metric_common.mli  metric_counter.ml  (+83 more)
lib/alpine/: component.ml  component.mli  directive.ml  directive.mli  dune  kirin_alpine.ml  kirin_alpine.mli  ssr.ml  ssr.mli  store.ml  store.mli
lib/angular/: codegen.ml  codegen.mli  dune  file_router.ml  file_router.mli  handler.ml  handler.mli  hydration.ml  hydration.mli  kirin_angular.ml  kirin_angular.mli  meta.ml  meta.mli  protocol.ml  protocol.mli  route_def.ml  route_def.mli  ssr.ml  ssr.mli  transfer_state.ml  transfer_state.mli
lib/astro/: codegen.ml  codegen.mli  content.ml  content.mli  dune  file_router.ml  file_router.mli  handler.ml  handler.mli  integration.ml  integration.mli  island.ml  island.mli  kirin_astro.ml  kirin_astro.mli  meta.ml  meta.mli  protocol.ml  protocol.mli  route_def.ml  route_def.mli  ssr.ml  ssr.mli  view_transitions.ml  view_transitions.mli
lib/auth/: auth_middleware.ml  auth_middleware.mli  csrf.ml  csrf.mli  dune  jwt.ml  jwt.mli  kirin_auth.ml  kirin_auth.mli  oauth2.ml  oauth2.mli  password.ml  password.mli  secure_random.ml  secure_random.mli  session.ml  session.mli
lib/browser/: dune  fetch.ml  history.ml  kirin_browser.ml  kirin_browser.mli  promise.ml  router.ml
lib/ext_mcp/: dune  mcp_adapter.ml  mcp_adapter.mli
lib/grpc/: dune  grpc.ml  grpc.mli
lib/htmx/: alpine.ml  alpine.mli  dune  extensions.ml  extensions.mli  form.ml  form.mli  headers.ml  headers.mli  hyperscript.ml  hyperscript.mli  kirin_htmx.ml  kirin_htmx.mli  oob.ml  oob.mli
lib/lit/: dune  element.ml  element.mli  kirin_lit.ml  kirin_lit.mli  shadow_dom.ml  shadow_dom.mli  ssr.ml  ssr.mli  template.ml  template.mli
lib/mcp/: client.ml  client.mli  dune  governance.ml  governance.mli  jsonrpc.ml  jsonrpc.mli  kirin_mcp.ml  kirin_mcp.mli  logging.ml  logging.mli  protocol.ml  protocol.mli  schema.ml  schema.mli  server.ml  server.mli  session.ml  session.mli  tasks.ml  tasks.mli  transport.ml  transport.mli
lib/preact/: compat.ml  compat.mli  dune  hydrate.ml  hydrate.mli  kirin_preact.ml  kirin_preact.mli  manifest.ml  manifest.mli  protocol.ml  protocol.mli  signals.ml  signals.mli  ssr.ml  ssr.mli  vite.ml  vite.mli
lib/qwik/: action.ml  action.mli  codegen.ml  codegen.mli  container.ml  container.mli  dune  file_router.ml  file_router.mli  handler.ml  handler.mli  kirin_qwik.ml  kirin_qwik.mli  loader.ml  loader.mli  meta.ml  meta.mli  protocol.ml  protocol.mli  qrl.ml  qrl.mli  route_def.ml  route_def.mli  signal.ml  signal.mli  ssr.ml  ssr.mli
lib/react/: assets.ml  assets.mli  data.ml  data.mli  dune  hydrate.ml  hydrate.mli  kirin_react.ml  kirin_react.mli  manifest.ml  manifest.mli  meta.ml  meta.mli  node_worker.ml  node_worker.mli  protocol.ml  protocol.mli  ssr.ml  ssr.mli  streaming.ml  streaming.mli  vite.ml  vite.mli  worker.ml  worker.mli
lib/remix/: action.ml  action.mli  dune  kirin_remix.ml  kirin_remix.mli  loader.ml  loader.mli  route.ml  route.mli  ssr.ml  ssr.mli
lib/solid/: data.ml  data.mli  dune  handler.ml  handler.mli  hydrate.ml  hydrate.mli  kirin_solid.ml  kirin_solid.mli  meta.ml  meta.mli  protocol.ml  protocol.mli  router.ml  router.mli  ssr.ml  ssr.mli  streaming.ml  streaming.mli  worker.ml  worker.mli
lib/svelte/: action.ml  action.mli  codegen.ml  codegen.mli  data.ml  data.mli  dune  file_router.ml  file_router.mli  handler.ml  handler.mli  hydrate.ml  hydrate.mli  kirin_svelte.ml  kirin_svelte.mli  loader.ml  loader.mli  manifest.ml  manifest.mli  meta.ml  meta.mli  preload.ml  preload.mli  protocol.ml  protocol.mli  route_def.ml  route_def.mli  ssr.ml  ssr.mli  streaming.ml  streaming.mli  worker.ml  worker.mli
lib/tanstack/: action.ml  action.mli  codegen.ml  codegen.mli  dune  file_router.ml  file_router.mli  handler.ml  handler.mli  kirin_tanstack.ml  kirin_tanstack.mli  loader.ml  loader.mli  manifest.ml  manifest.mli  preload.ml  preload.mli  route_def.ml  route_def.mli
lib/trpc/: batch.ml  batch.mli  codegen.ml  codegen.mli  context.ml  context.mli  dune  handler.ml  handler.mli  kirin_trpc.ml  kirin_trpc.mli  procedure.ml  procedure.mli  subscription.ml  subscription.mli  trpc_router.ml  trpc_router.mli
lib/vue/: action.ml  action.mli  codegen.ml  codegen.mli  data.ml  data.mli  dune  file_router.ml  file_router.mli  handler.ml  handler.mli  hydrate.ml  hydrate.mli  kirin_vue.ml  kirin_vue.mli  loader.ml  loader.mli  manifest.ml  manifest.mli  meta.ml  meta.mli  preload.ml  preload.mli  protocol.ml  protocol.mli  route_def.ml  route_def.mli  ssr.ml  ssr.mli  streaming.ml  streaming.mli  worker.ml  worker.mli
lib/webrtc/: dune  webrtc_adapter.ml  webrtc_adapter.mli  webrtc_config.mli
test/: dune  test_alpine.ml  test_angular.ml  test_astro.ml  test_auth.ml  test_backpressure_suite.ml  test_cache.ml  test_cache_qcheck.ml  test_cache_suite.ml  test_cluster_suite.ml  test_compress_suite.ml  test_cookie.ml  test_cookie_suite.ml  test_etag_suite.ml  test_fs_compat.ml  test_graphql_relay.ml  test_graphql_suite.ml  test_grpc_suite.ml  test_health_suite.ml  test_helpers.ml  test_htmx.ml  test_i18n.ml  test_jobs_suite.ml  test_kirin.ml  test_lit.ml  test_mcp.ml  test_metrics_suite.ml  test_middleware.ml  test_multicore.ml  test_multipart_suite.ml  test_no_shell_node_worker.ml  test_openapi.ml  test_parallel_suite.ml  test_pool.ml  test_pool_qcheck.ml  test_pool_suite.ml  test_preact.ml  test_query_suite.ml  test_qwik.ml  test_ratelimit_suite.ml  (+22 more)
(+49 files in other folders)
