(library
 (name kirin)
 (public_name kirin)
 (libraries
  eio
  eio_main
  cohttp
  cohttp-eio
  yojson
  uri
  mirage-crypto
  mirage-crypto-rng
  cstruct
  base64
  digestif
  decompress.de
  decompress.gz
  decompress.zl
  bigstringaf
  grpc-direct
  grpc-direct-core
  graphql
  graphql_parser
  kirin_mcp
  ocaml-webrtc
  caqti
  caqti-eio
  caqti-eio.unix
  unix
  threads
  str)
 (preprocess
  (pps ppx_deriving.show ppx_deriving_yojson)))
