(library
 (name kirin)
 (public_name kirin)
 (libraries
  eio
  eio_main
  cohttp
  cohttp-eio
  yojson
  uri
  mirage-crypto
  mirage-crypto-rng
  cstruct
  base64
  digestif
  eqaf
  decompress.de
  decompress.gz
  decompress.zl
  bigstringaf
  graphql
  graphql_parser
  kirin_mcp
  hmap
  caqti
  caqti-eio
  caqti-eio.unix
  unix
  threads
  str
  dune-build-info)
 (preprocess
  (pps ppx_deriving.show ppx_deriving_yojson))
 (instrumentation (backend bisect_ppx)))
