(test
 (name test_kirin)
 (libraries kirin alcotest grpc-direct-core))

(test
 (name test_auth)
 (libraries kirin kirin.auth alcotest str unix))

(test
 (name test_mcp)
 (libraries kirin kirin.mcp alcotest str))

(test
 (name test_openapi)
 (libraries kirin alcotest str))

(test
 (name test_i18n)
 (libraries kirin alcotest str))

(test
 (name test_validation)
 (libraries kirin alcotest str))

(test
 (name test_testing)
 (libraries kirin alcotest str unix))

(test
 (name test_react)
 (libraries kirin kirin.react alcotest str unix))

(test
 (name test_htmx)
 (libraries kirin kirin.htmx alcotest str))
