(test
 (name test_kirin)
 (libraries kirin alcotest grpc-direct-core))

(test
 (name test_auth)
 (libraries kirin kirin.auth alcotest str unix eio_main))

(test
 (name test_mcp)
 (libraries kirin kirin.mcp alcotest str))

(test
 (name test_openapi)
 (libraries kirin alcotest str))

(test
 (name test_i18n)
 (libraries kirin alcotest str))

(test
 (name test_validation)
 (libraries kirin alcotest str))

(test
 (name test_testing)
 (libraries kirin alcotest str unix))

(test
 (name test_react)
 (libraries kirin kirin.react alcotest str unix))

(test
 (name test_htmx)
 (libraries kirin kirin.htmx alcotest str))

(test
 (name test_trpc)
 (libraries kirin kirin.trpc alcotest str unix))

(test
 (name test_tanstack)
 (libraries kirin kirin.tanstack alcotest str unix))

(test
 (name test_solid)
 (libraries kirin kirin.solid alcotest str unix))

(test
 (name test_svelte)
 (libraries kirin kirin.svelte alcotest str unix))

(test
 (name test_vue)
 (libraries kirin kirin.vue alcotest str unix))

(test
 (name test_angular)
 (libraries kirin kirin.angular alcotest str unix))

(test
 (name test_qwik)
 (libraries kirin kirin.qwik alcotest str unix))

(test
 (name test_astro)
 (libraries kirin kirin.astro alcotest str unix))

(test
 (name test_preact)
 (libraries kirin kirin.preact alcotest str unix))

(test
 (name test_lit)
 (libraries kirin kirin.lit alcotest str unix))

(test
 (name test_alpine)
 (libraries kirin kirin.alpine alcotest str unix))

(test
 (name test_remix)
 (libraries kirin kirin.remix alcotest str unix))

(test
 (name test_graphql_relay)
 (libraries kirin alcotest))

(test
 (name test_multicore)
 (libraries kirin alcotest eio_main))

(test
 (name test_streaming)
 (libraries kirin alcotest eio_main))

(test
 (name test_fs_compat)
 (libraries kirin alcotest unix))

(test
 (name test_no_shell_node_worker)
 (deps ../lib/react/node_worker.ml)
 (action (run %{exe:test_no_shell_node_worker.exe} %{dep:../lib/react/node_worker.ml})))
