(test
 (name test_kirin)
 (modules test_kirin test_helpers
          test_response_suite test_router_suite test_cookie_suite
          test_etag_suite test_multipart_suite test_compress_suite
          test_ratelimit_suite test_websocket_suite test_sse_suite
          test_template_suite test_tls_suite test_grpc_suite
          test_graphql_suite test_pool_suite test_backpressure_suite
          test_cache_suite test_jobs_suite test_parallel_suite
          test_health_suite test_metrics_suite test_shutdown_suite
          test_webrtc_suite test_query_suite test_cluster_suite)
 (libraries kirin alcotest grpc-direct-core eio eio_main str unix))

(test
 (name test_auth)
 (libraries kirin kirin.auth alcotest str unix eio eio_main hmap))

(test
 (name test_mcp)
 (libraries kirin kirin.mcp alcotest str eio eio_main))

(test
 (name test_openapi)
 (libraries kirin alcotest str))

(test
 (name test_i18n)
 (libraries kirin alcotest str))

(test
 (name test_validation)
 (libraries kirin alcotest str))

(test
 (name test_testing)
 (libraries kirin alcotest str unix))

(test
 (name test_react)
 (libraries kirin kirin.react alcotest str unix))

(test
 (name test_htmx)
 (libraries kirin kirin.htmx alcotest str))

(test
 (name test_trpc)
 (libraries kirin kirin.trpc alcotest str unix eio_main))

(test
 (name test_tanstack)
 (libraries kirin kirin.tanstack alcotest str unix))

(test
 (name test_solid)
 (libraries kirin kirin.solid alcotest str unix))

(test
 (name test_svelte)
 (libraries kirin kirin.svelte alcotest str unix eio_main))

(test
 (name test_vue)
 (libraries kirin kirin.vue alcotest str unix eio_main))

(test
 (name test_angular)
 (libraries kirin kirin.angular alcotest str unix))

(test
 (name test_qwik)
 (libraries kirin kirin.qwik alcotest str unix))

(test
 (name test_astro)
 (libraries kirin kirin.astro alcotest str unix))

(test
 (name test_preact)
 (libraries kirin kirin.preact alcotest str unix))

(test
 (name test_lit)
 (libraries kirin kirin.lit alcotest str unix))

(test
 (name test_alpine)
 (libraries kirin kirin.alpine alcotest str unix))

(test
 (name test_remix)
 (libraries kirin kirin.remix alcotest str unix))

(test
 (name test_graphql_relay)
 (libraries kirin alcotest))

(test
 (name test_multicore)
 (libraries kirin alcotest eio_main))

(test
 (name test_streaming)
 (libraries kirin alcotest eio_main))

(test
 (name test_fs_compat)
 (libraries kirin alcotest unix))

(test
 (name test_trace)
 (libraries kirin alcotest hmap eio eio_main))

(test
 (name test_no_shell_node_worker)
 (deps ../lib/react/node_worker.ml)
 (action (run %{exe:test_no_shell_node_worker.exe} %{dep:../lib/react/node_worker.ml})))

(test
 (name test_cache)
 (libraries kirin alcotest eio eio_main))

(test
 (name test_pool)
 (libraries kirin alcotest eio_main unix))

(test
 (name test_websocket)
 (libraries kirin alcotest))

(test
 (name test_sse)
 (libraries kirin alcotest eio eio_main))

(test
 (name test_router)
 (libraries kirin alcotest eio eio_main))

(test
 (name test_middleware)
 (libraries kirin alcotest eio eio_main unix))

(test
 (name test_cookie)
 (libraries kirin alcotest eio eio_main))
