(library
 (name kirin_auth)
 (public_name kirin.auth)
 (libraries
  kirin
  http            ; HTTP types
  digestif        ; SHA256, HMAC
  eqaf            ; constant-time comparison
  base64          ; Base64 encoding
  yojson          ; JSON handling
  uri             ; URL encoding for OAuth2
  eio
  unix            ; OS time and random
  hmap)           ; typed heterogeneous map
 (instrumentation (backend bisect_ppx)))
